@@ -99,7 +99,7 @@ public class JobScope extends BatchScopeSupport {
 				if (scopedObject == null) {
 
 					if (logger.isDebugEnabled()) {
-						logger.debug(String.format("Creating object in scope=%s, name=%s", this.getName(), name));
+						logger.debug("Creating object in scope=%s, name=%s".formatted(this.getName(), name));
 					}
 
 					scopedObject = objectFactory.getObject();
@@ -129,7 +129,7 @@ public class JobScope extends BatchScopeSupport {
 	public void registerDestructionCallback(String name, Runnable callback) {
 		JobContext context = getContext();
 		if (logger.isDebugEnabled()) {
-			logger.debug(String.format("Registered destruction callback in scope=%s, name=%s", this.getName(), name));
+			logger.debug("Registered destruction callback in scope=%s, name=%s".formatted(this.getName(), name));
 		}
 		context.registerDestructionCallback(name, callback);
 	}
@@ -141,7 +141,7 @@ public class JobScope extends BatchScopeSupport {
 	public Object remove(String name) {
 		JobContext context = getContext();
 		if (logger.isDebugEnabled()) {
-			logger.debug(String.format("Removing from scope=%s, name=%s", this.getName(), name));
+			logger.debug("Removing from scope=%s, name=%s".formatted(this.getName(), name));
 		}
 		return context.removeAttribute(name);
 	}
