@@ -94,7 +94,7 @@ class JpaPagingItemReaderAsyncTests {
 			}
 		}
 		if (!throwables.isEmpty()) {
-			throw new IllegalStateException(String.format("Failed %d out of %d", throwables.size(), max),
+			throw new IllegalStateException("Failed %d out of %d".formatted(throwables.size(), max),
 					throwables.get(0));
 		}
 	}
