@@ -64,8 +64,8 @@ public class StepExecutionRequest implements Serializable {
 
 	@Override
 	public String toString() {
-		return String.format("StepExecutionRequest: [jobExecutionId=%d, stepExecutionId=%d, stepName=%s]",
-				jobExecutionId, stepExecutionId, stepName);
+		return "StepExecutionRequest: [jobExecutionId=%d, stepExecutionId=%d, stepName=%s]".formatted(
+		jobExecutionId, stepExecutionId, stepName);
 	}
 
 }
